# VK_apartments_posts_parcer

./: .gitignore  README.md  config.json  main.py  pyproject.toml
utils/: __init__.py  clear_posts_data.py  drop_blowouts_posts.py  drop_duplicated_posts.py  drop_na_money_posts.py  find_apartment_cost_in_text.py
vk_api_parser/: __init__.py  filter_post_data.py  get_posts_count.py  parse_domain_posts.py  parse_wall_data.py
