[tool.poetry]
name = "vk-apartments-posts-parcer"
version = "0.1.0"
description = ""
authors = ["Алексей Шумов <lehashumov3525@gmail.com>"]
readme = "README.md"
packages = [{include = "vk_apartments_posts_parcer"}]

[tool.poetry.dependencies]
python = "3.11.1"
pandas = "^2.1.1"
vk-api = "^11.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
